--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
         show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+    open-in-view: false
   h2:
     console:
       enabled: true
@@ -26,7 +27,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: "jdbc:mysql://localhost:3304/library"
+    url: "jdbc:mysql://localhost/library"
     username: "root"
     password: "Abcd1234!"
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -38,3 +39,4 @@ spring:
         show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
+    open-in-view: false
